--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,9 +1,9 @@
 <div class="container__menu-bar">
   <ul>
-    <li><a href="https://linkedin.com/in/felipe-aguiar-exe">Linkedin</a></li>
+    <li><a href="https://www.linkedin.com/in/georgia-rocha-dev/">Linkedin</a></li>
     <li><span>•</span></li>
-    <li><a href="https://github.com/felipeAguiarCode">Github</a></li>
+    <li><a href="https://github.com/georgia-rocha">Github</a></li>
     <li><span>•</span></li>
-    <li><a href="https://www.youtube.com/channel/UCCcDZkI7AITYFCgDEFV9OoQ">Youtube</a></li>
+    <li><a href="https://www.youtube.com/watch?v=ckQN6Zu5UZo">Youtube</a></li>
   </ul>
 </div>
