--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -12,12 +12,13 @@
   width: 200px;
   min-width: 200px;
   margin-right: 20px;
+  border-radius: 20px;
 }
 
 .small-card__title {
   display: flex;
   justify-content: center;
-  align-items: center;
+  flex-direction: column;
 }
 
 .container__small-card__separator{
