--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -11,7 +11,11 @@
 
     <div class="small-card__title">
       <h1><a [routerLink]="['content', Id]" >{{ cardTitle }}</a></h1>
+      <p>{{ cardDescription }}</p>
     </div>
+  </div>
+
+  <div>
   </div>
 
   <div class="container__small-card__separator">
